src/test/ui/let-else/let-else-if.stderr
error: conditional `else if` is not supported for `let...else`
  --> $DIR/let-else-if.rs:4:33
   |
LL |     let Some(_) = Some(()) else if true {
   |                                 ^^ expected `{`
   |
help: try placing this code inside a block
   |
LL ~     let Some(_) = Some(()) else { if true {
LL +
LL +         return;
LL +     } else {
LL +         return;
LL ~     } };
   |

error: aborting due to previous error

